--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
+    - "lib/tasks/auto_annotate_models.rake"
 
 Layout/LineLength:
   Max: 90
